removed-policy/networkpolicy-policy2.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default.policy2
  namespace: calico-system
spec:
  egress:
    - action: Allow
      destination: {}
      source: {}
  ingress:
    - action: Allow
      destination: {}
      source: {}
  tier: default
  types:
    - Ingress
    - Egress
